// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit overview renders automatic deposit correctly 1`] = `
<div>
  <div
    class="wcpay-deposit-overview"
  >
    <div
      class="components-card is-size-medium wcpay-deposit-automatic css-1xs3c37-CardUI e1q7k77g0"
    >
      <ul>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Deposit date: Jan 2, 2020
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value"
              >
                <div
                  class="woocommerce-order-status"
                >
                  <span
                    class="woocommerce-order-status__indicator is-paid"
                  />
                  Paid
                </div>
              </div>
            </div>
            <div
              class="wcpay-summary__item-detail"
            >
              MOCK BANK •••• 1234 (USD)
            </div>
          </div>
        </li>
        <li
          class="wcpay-deposit-amount"
        >
          $20.00 USD
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Deposit overview renders instant deposit correctly 1`] = `
<div>
  <div
    class="wcpay-deposit-overview"
  >
    <div
      aria-describedby="woocommerce-summary-helptext-1"
      aria-label="Deposit overview"
      aria-orientation="horizontal"
      role="menu"
    >
      <p
        class="screen-reader-text"
        id="woocommerce-summary-helptext-1"
      >
        List of data points available for filtering. Use arrow keys to cycle through the list. Click a data point for a detailed report.
      </p>
      <ul
        class="woocommerce-summary has-4-items"
      >
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Instant deposit date: Jan 2, 2020
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value"
              >
                <div
                  class="woocommerce-order-status"
                >
                  <span
                    class="woocommerce-order-status__indicator is-paid"
                  />
                  Paid
                </div>
              </div>
            </div>
            <div
              class="wcpay-summary__item-detail"
            >
              MOCK BANK •••• 1234 (USD)
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Deposit amount
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value"
              >
                $20.30 USD
              </div>
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              undefined% service fee
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value wcpay-deposit-fee"
              >
                $0.30
              </div>
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Net deposit amount
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value wcpay-deposit-net"
              >
                $20.00 USD
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
